# gcite

./: .gitignore  LICENSE  README.md  SPEC.md
apps-script/: Code.gs  README.md  Settings.html  Sidebar.html  appsscript.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/agents/: __init__.py  base.py  filter.py  format.py  rank.py
backend/api/: __init__.py  main.py  models.py  routes.py
backend/config/: __init__.py  settings.py
backend/services/: __init__.py  cite_assist.py
backend/tests/: __init__.py  test_agents.py  test_api.py
